<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Whatsfordinner">

    <TextView
        android:id="@+id/header2"
        android:layout_width="400dp"
        android:layout_height="78dp"
        android:background="#2196F3"
        android:text="@string/dinner_ideas"
        android:textSize="58sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="143dp"
        android:layout_height="144dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/randon_dinner"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="157dp"
        android:layout_height="148dp"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginBottom="16dp"
        android:text="@string/customize_dinner"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="372dp"
        android:contentDescription="@string/image2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header2"
        app:srcCompat="@drawable/_whatsfordinner1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="345dp"
        android:layout_height="64dp"
        android:layout_marginTop="44dp"
        android:text="@string/if_you_want_to_pick_a_dinner_idea_at_randon_click_the_random_dinner_button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="345dp"
        android:layout_height="64dp"
        android:layout_marginTop="132dp"
        android:text="@string/if_you_click_on_cusomize_dinner_we_will_pick_a_dinner_idea_from_the_few_questions_we_ask"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>